# kde-dynamic-wallpaper

./: .gitignore  CMakeLists.txt  README.md  dev-helper.sh  metadata.json  package.sh  release.sh
contents/code/: locationDetection.js  timeCalculations.js
contents/config/: main.xml
contents/ui/: config.qml  main.qml
